--- a/src/Page/Page.module.css
+++ b/src/Page/Page.module.css
@@ -72,21 +72,3 @@
 .pageHeader {
     position: relative;
 }
-
-.container {
-  overflow: visible;
-  width: 100%;
-}
-
-@media (max-width: 650px) {
-  .container {
-    overflow-x: auto;
-    overflow-y: visible;
-    -webkit-overflow-scrolling: touch;
-    width: 100%;
-  }
-
-  .container::-webkit-scrollbar {
-    display: none;
-  }
-}
